--- a/package.json
+++ b/package.json
@@ -22,20 +22,22 @@
     "@angular/platform-browser-dynamic": "4.1.3",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/firebase": "^4.3.2",
+    "@ionic-native/geolocation": "^4.3.2",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/sqlite": "^4.3.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^5.0.0-rc.3",
     "cordova-android": "6.3.0",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.0.5",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-firebase": "^0.1.24",
+    "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sqlite-storage": "^2.0.4",
-    "dexie": "1.5.1",
     "firebase": "^4.6.0",
     "ionic-angular": "3.6.1",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -58,7 +60,8 @@
       "cordova-plugin-console": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {}
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "android"
