--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "3.12.1",
     "@ionic-native/firebase": "^4.3.2",
     "@ionic-native/geolocation": "^4.3.2",
+    "@ionic-native/google-maps": "^4.3.3",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/sqlite": "^4.3.1",
     "@ionic-native/status-bar": "3.12.1",
@@ -34,6 +35,7 @@
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-firebase": "^0.1.24",
     "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-googlemaps": "^2.0.11",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
@@ -61,7 +63,11 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "YOUR_ANDROID_API_KEY_IS_HERE",
+        "API_KEY_FOR_IOS": "YOUR_IOS_API_KEY_IS_HERE"
+      }
     },
     "platforms": [
       "android"
