--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^5.0.0-rc.3",
-    "cordova-android": "6.3.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.0.5",
     "cordova-plugin-device": "^1.1.4",
@@ -69,8 +68,6 @@
         "API_KEY_FOR_IOS": "YOUR_IOS_API_KEY_IS_HERE"
       }
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
